# greeter

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  sdl
src/: Makefile.am  Makefile.in  main.cc
